{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 82,
  "lineage": "48f6ae80-6eec-fe75-1f1d-78e75547f701",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:825671066733:instance/i-0b43fd5701b1c47a2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b43fd5701b1c47a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jensenr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5e659fa675b04d0",
            "private_dns": "ip-10-0-1-245.eu-central-1.compute.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-71-108-130.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.108.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-099e5af31c1fba97c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd14e37c09aa5d10",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "student1-instance",
              "Owner": "student1"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "student1-instance",
              "Owner": "student1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ec1934770180f9f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:internet-gateway/igw-08f8d5364a3490e33",
            "id": "igw-08f8d5364a3490e33",
            "owner_id": "825671066733",
            "tags": {
              "Name": "student1-igw",
              "Owner": "student1"
            },
            "tags_all": {
              "Name": "student1-igw",
              "Owner": "student1"
            },
            "vpc_id": "vpc-07906fa5a04d5671a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:route-table/rtb-08cb8c2a00bbcf039",
            "id": "rtb-08cb8c2a00bbcf039",
            "owner_id": "825671066733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f8d5364a3490e33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "student1-rt",
              "Owner": "student1"
            },
            "tags_all": {
              "Name": "student1-rt",
              "Owner": "student1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07906fa5a04d5671a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be3c597213b02fdf",
            "route_table_id": "rtb-08cb8c2a00bbcf039",
            "subnet_id": "subnet-0bd14e37c09aa5d10"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:security-group/sg-07ec1934770180f9f",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ec1934770180f9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "188.179.193.131/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "student1-sg",
            "name_prefix": "",
            "owner_id": "825671066733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "student1-sg",
              "Owner": "student1"
            },
            "tags_all": {
              "Name": "student1-sg",
              "Owner": "student1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07906fa5a04d5671a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:subnet/subnet-0bd14e37c09aa5d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd14e37c09aa5d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825671066733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "student1-subnet",
              "Owner": "student1"
            },
            "tags_all": {
              "Name": "student1-subnet",
              "Owner": "student1"
            },
            "vpc_id": "vpc-07906fa5a04d5671a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:vpc/vpc-07906fa5a04d5671a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d8b48c8bc30b1e8",
            "default_route_table_id": "rtb-012d3546b225cf76a",
            "default_security_group_id": "sg-08ba7d9f466605ccc",
            "dhcp_options_id": "dopt-200d2f48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07906fa5a04d5671a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012d3546b225cf76a",
            "owner_id": "825671066733",
            "tags": {
              "Name": "student1-vpc",
              "Owner": "student1"
            },
            "tags_all": {
              "Name": "student1-vpc",
              "Owner": "student1"
            }
          }
        }
      ]
    }
  ]
}